styles.css
body {
  background-color: aliceblue;
}

label{color: red; display: none;}
#board > .outer-square{
  display: inline-block;
  width: 60px;
}
#board .position{
  background: gold;
  height: 60px;
  width: 60px;
  display: inline-block;
}
.square{
  position: relative;
  display: inline-block;
  padding: 14px;
  background: gray;
  border: 1px solid yellow;
}
.square input{
  font-size: 14;
  text-transform: uppercase;
  width: 40px;
  height: 40px;
}
.square .number{
  position: absolute;
  top: 0;
  left: 0;
  font-size: 10px;
  font-weight: bold;
  border: 1px solid black;
  padding: 3px;
  background-color: pink;
}
.square .remove{
  /*visibility: hidden;*/
  position: absolute;
  bottom: 0;
  right: 0;
  font-size: 10px;
}
.square .remove:hover{
  /*visibility: visible;*/
  position: absolute;
  bottom: 0;
  right: 0;
  font-size: 16px;
  font-weight: bold;
  border: 1px solid black;
  padding: 3px;
  color: white;
  background-color: red;
  cursor: pointer;
}

